@@ -164,6 +164,25 @@ Oct&nbsp;1&nbsp;2001
 
 -->
 
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Jan&nbsp;18&nbsp;2002
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Another New Glade Tutorial</B>
+<P>
+Rikke D. Giles, from the Kitsap Peninsula Linux User's Group, has written
+another
+<a href="http://kendaco.telebyte.com/~rgiles/kplug/tutorial/gladekplugtut.html">
+Glade Tutorial</a>. This one has nice descriptions of all the widgets in the
+palette and lots of other useful stuff. Definitely worth a look.
+</font></td></tr>
+
+
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
