@@ -1,5 +1,7 @@
 2002-01-18  Damon Chaplin  <damon@ximian.com>
 
+	* index.html: added new tutorial.
+
 	* download.html: updated last stable version to 0.6.2.
 
 2002-01-07  Damon Chaplin  <damon@ximian.com>
